@@ -1,4 +1,13 @@
 -----------------------------------------------------------------------------------------
+Data Crow version 4.7.x                                            Released on 2023-03-xx
+-----------------------------------------------------------------------------------------
+
+[Changed]
+- Hierarchy view for containers will now show all items per container + the items of 
+  children of the selected container.
+
+
+-----------------------------------------------------------------------------------------
 Data Crow version 4.6.1                                            Released on 2023-02-12
 -----------------------------------------------------------------------------------------
 
